fix: 발견을 가져올 때 기존 전부 -> 최근 1개만 가져오도록 수정